@@ -33,8 +33,8 @@ that is not the case.
   so under Linux you should actually use *2.6.26 or newer whenever
   possible*.
 
-* `Python <http://www.python.org/>`_ 2.7.0 or newer (but not Python
-  3.x). Make sure to also install the development headers.
+* `Python <http://www.python.org/>`_ 3.3.0 or newer. Make sure to also
+  install the development headers.
 
 * The `PyCrypto++ Python Module
   <http://pypi.python.org/pypi/pycryptopp>`_. To check if this module
