@@ -1,3 +1,7 @@
+UNRELEASED, S3QL tip
+
+  * S3QL now requires Python 3.3 or newer.
+
 2013-04-09, S3QL 1.14
 
   * Reduced CPU consumption when S3QL is idle.
